feat：解析配置文件，加载数据
